# esmi_oob_library

./: CMakeLists.txt  apml64.pc.in  cross-aarch64-linux-gnu.cmake  cross-arm-linux-gnueabihf.cmake
cmake_modules/: utils.cmake
docs/: README.md  RELEASENOTES.md  apml_doxygen.cfg  esmi_oob_doxygen.cfg  release_notes_doxygen.cfg
example/: esmi_oob_cpuid_tool.c  esmi_oob_example.c  esmi_oob_tool.c
include/esmi_oob/: apml.h  apml_common.h  apml_err.h  apml_recovery.h  esmi_common.h  esmi_cpuid_msr.h  esmi_i2c.h  esmi_mailbox.h  esmi_rmi.h  esmi_tsi.h  rmi_mailbox_mi300.h  tsi_mi300.h
src/esmi_oob/: apml.c  apml64Config.in  apml_err.c  apml_recovery.c  common.h  esmi_common.c  esmi_cpuid_msr.c  esmi_i2c.c  esmi_mailbox.c  esmi_oob64Config.in  esmi_rmi.c  esmi_tsi.c  rmi_mailbox_mi300.c  tsi_mi300.c
tools/: apml_cpuid_tool.c  apml_tool.c  mi300_tool.c  mi300_tool.h
